# Emo-desktop

./: .gitignore  PRD.md  TODO.md  package-lock.json  package.json
emo-robot-companion/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
emo-robot-companion/scripts/: download_models.py  requirements.txt
emo-robot-companion/src/: App.jsx  index.css
emo-robot-companion/src-tauri/: Cargo.toml  tauri.conf.json
emo-robot-companion/src-tauri/src/: lib.rs
emo-robot-companion/src-tauri/src/ai/: mod.rs  model_downloader.rs  model_manager.rs  prompts.rs  router.rs  tools.rs
emo-robot-companion/src-tauri/src/voice/: audio_input.rs  mod.rs  stt.rs  tts.rs  voice_manager.rs
emo-robot-companion/src/components/: Chat.jsx  EmoRobot.jsx  Eyes.jsx  Settings.jsx  SetupScreen.jsx
