[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
tokio = { version = "1.49.0", features = ["full"] }
hf-hub = { version = "0.4.3", features = ["tokio"] }
anyhow = "1.0.101"
tokenizers = "0.22.2"
cpal = "0.17.1"
rubato = "1.0.1"
dasp_interpolate = "0.11.0"
dasp_signal = "0.11.0"
rodio = "0.18.1"
walkdir = "2.5.0"
sysinfo = "0.36.1"
chrono = "0.4.43"

# Automation tools
rusqlite = { version = "0.34.0", features = ["bundled"] }
clipboard = "0.5"
screenshots = "0.8"
open = "5"
notify = "6"
urlencoding = "2"
